Added alter table command.

--- a/DatabaseAutoMigrator/DatabaseAutoMigrator/DatabaseAutoMigrator.csproj
+++ b/DatabaseAutoMigrator/DatabaseAutoMigrator/DatabaseAutoMigrator.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseMigrator.cs" />
+    <Compile Include="Commands\AlterTableCommandModel.cs" />
     <Compile Include="Commands\DropTableCommandModel.cs" />
     <Compile Include="Commands\Factories\BaseGenericCommandFactory.cs" />
     <Compile Include="Commands\Factories\ICommandFactory.cs" />
