--- a/DatabaseAutoMigrator/DatabaseAutoMigrator/DatabaseAutoMigrator.csproj
+++ b/DatabaseAutoMigrator/DatabaseAutoMigrator/DatabaseAutoMigrator.csproj
@@ -40,24 +40,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseDatabaseContext.cs" />
+    <Compile Include="BaseMigrationFile.cs" />
     <Compile Include="BaseMigrator.cs" />
-    <Compile Include="Commands\AlterTableCommandModel.cs" />
-    <Compile Include="Commands\DropTableCommandModel.cs" />
-    <Compile Include="Commands\Factories\BaseGenericCommandFactory.cs" />
-    <Compile Include="Commands\Factories\ICommandFactory.cs" />
-    <Compile Include="Commands\CreateTableCommandModel.cs" />
-    <Compile Include="Commands\Factories\IGenericCommandFactory.cs" />
-    <Compile Include="Commands\InsertCommandModel.cs" />
-    <Compile Include="Commands\RawCommandModel.cs" />
+    <Compile Include="CommandHelper.cs" />
+    <Compile Include="ICommandFactory.cs" />
+    <Compile Include="Models\Commands\AlterTableCommandModel.cs" />
+    <Compile Include="Models\Commands\CreateTableCommandModel.cs" />
+    <Compile Include="Models\Commands\InsertCommandModel.cs" />
+    <Compile Include="Models\Commands\RawCommandModel.cs" />
     <Compile Include="DatabaseAccess\BaseDatabaseProvider.cs" />
     <Compile Include="DatabaseAccess\IDatabaseCommand.cs" />
     <Compile Include="DatabaseAccess\IDatabaseProvider.cs" />
     <Compile Include="DatabaseAccess\IDatabaseReader.cs" />
-    <Compile Include="DatabaseAccess\IDatabaseTransaction.cs" />
+    <Compile Include="IDatabaseContext.cs" />
     <Compile Include="IDialect.cs" />
     <Compile Include="Exceptions\WrongConnectionStringException.cs" />
     <Compile Include="ExecuteIterationResult.cs" />
-    <Compile Include="Commands\ICommandModel.cs" />
+    <Compile Include="Models\Commands\ICommandModel.cs" />
     <Compile Include="IMigrationFile.cs" />
     <Compile Include="IMigrator.cs" />
     <Compile Include="Logging\BaseLogger.cs" />
@@ -70,17 +70,15 @@
     <Compile Include="Models\ColumnParameter.cs" />
     <Compile Include="Providers\Sql\Helpers\SqlColumnHelper.cs" />
     <Compile Include="Providers\Sql\SqlCommandFactory.cs" />
-    <Compile Include="Providers\Sql\SqlDatabaseCommand.cs" />
-    <Compile Include="Providers\Sql\SqlDatabaseProvider.cs" />
-    <Compile Include="Providers\Sql\SqlDatabaseReader.cs" />
-    <Compile Include="Providers\Sql\SqlDatabaseTransaction.cs" />
+    <Compile Include="Providers\Sql\DataAccess\SqlDatabaseCommand.cs" />
+    <Compile Include="Providers\Sql\SqlDatabaseContext.cs" />
+    <Compile Include="Providers\Sql\DataAccess\SqlDatabaseProvider.cs" />
+    <Compile Include="Providers\Sql\DataAccess\SqlDatabaseReader.cs" />
     <Compile Include="Providers\Sql\SqlMigrator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Sql\SqlDialect.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Providers\Sql\CommandFactories\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
