--- a/DatabaseAutoMigrator/DatabaseAutoMigrator/DatabaseAutoMigrator.csproj
+++ b/DatabaseAutoMigrator/DatabaseAutoMigrator/DatabaseAutoMigrator.csproj
@@ -43,21 +43,28 @@
     <Compile Include="BaseDatabaseContext.cs" />
     <Compile Include="BaseMigrationFile.cs" />
     <Compile Include="BaseMigrator.cs" />
+    <Compile Include="BaseTypeMapper.cs" />
     <Compile Include="CommandHelper.cs" />
-    <Compile Include="ICommandFactory.cs" />
-    <Compile Include="Models\Commands\AlterTableCommandModel.cs" />
-    <Compile Include="Models\Commands\CreateTableCommandModel.cs" />
-    <Compile Include="Models\Commands\InsertCommandModel.cs" />
-    <Compile Include="Models\Commands\RawCommandModel.cs" />
+    <Compile Include="DatabaseAccess\DatabaseCommand.cs" />
+    <Compile Include="GenericColumnGenerator.cs" />
+    <Compile Include="GenericCommandGenerator.cs" />
+    <Compile Include="IColumnGenerator.cs" />
+    <Compile Include="ICommandGenerator.cs" />
+    <Compile Include="ITypeMapper.cs" />
+    <Compile Include="Models\Expressions\AlterTableExpression.cs" />
+    <Compile Include="Models\Expressions\BaseMigrationExpression.cs" />
+    <Compile Include="Models\Expressions\CreateTableExpression.cs" />
+    <Compile Include="Models\FunctionType.cs" />
+    <Compile Include="Models\Expressions\InsertExpression.cs" />
+    <Compile Include="Models\Expressions\RawCommandExpression.cs" />
     <Compile Include="DatabaseAccess\BaseDatabaseProvider.cs" />
-    <Compile Include="DatabaseAccess\IDatabaseCommand.cs" />
     <Compile Include="DatabaseAccess\IDatabaseProvider.cs" />
     <Compile Include="DatabaseAccess\IDatabaseReader.cs" />
     <Compile Include="IDatabaseContext.cs" />
     <Compile Include="IDialect.cs" />
     <Compile Include="Exceptions\WrongConnectionStringException.cs" />
     <Compile Include="ExecuteIterationResult.cs" />
-    <Compile Include="Models\Commands\ICommandModel.cs" />
+    <Compile Include="Models\Expressions\IMigrationExpression.cs" />
     <Compile Include="IMigrationFile.cs" />
     <Compile Include="IMigrator.cs" />
     <Compile Include="Logging\BaseLogger.cs" />
@@ -66,17 +73,23 @@
     <Compile Include="Logging\LoggerFactory.cs" />
     <Compile Include="MigrateIteration.cs" />
     <Compile Include="Models\Column.cs" />
-    <Compile Include="Models\ColumnDataType.cs" />
+    <Compile Include="Models\DbType.cs" />
     <Compile Include="Models\ColumnParameter.cs" />
-    <Compile Include="Providers\Sql\Helpers\SqlColumnHelper.cs" />
-    <Compile Include="Providers\Sql\SqlCommandFactory.cs" />
-    <Compile Include="Providers\Sql\DataAccess\SqlDatabaseCommand.cs" />
-    <Compile Include="Providers\Sql\SqlDatabaseContext.cs" />
+    <Compile Include="Providers\Sql\BaseSqlMigrator.cs" />
+    <Compile Include="Providers\Sql\Sql2005\Sql2005CommandGenerator.cs" />
+    <Compile Include="Providers\Sql\Sql2005\Sql2005DatabaseContext.cs" />
+    <Compile Include="Providers\Sql\Sql2008\Sql2008CommandGenerator.cs" />
+    <Compile Include="Providers\Sql\Sql2000\Sql2000DatabaseContext.cs" />
+    <Compile Include="Providers\Sql\Sql2005\Sql2005TypeMapper.cs" />
+    <Compile Include="Providers\Sql\Sql2008\Sql2008TypeMapper.cs" />
+    <Compile Include="Providers\Sql\Sql2000\Sql2000CommandGenerator.cs" />
+    <Compile Include="Providers\Sql\Sql2008\Sql2008DatabaseContext.cs" />
     <Compile Include="Providers\Sql\DataAccess\SqlDatabaseProvider.cs" />
     <Compile Include="Providers\Sql\DataAccess\SqlDatabaseReader.cs" />
-    <Compile Include="Providers\Sql\SqlMigrator.cs" />
+    <Compile Include="Providers\Sql\Sql2008Migrator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Sql\SqlDialect.cs" />
+    <Compile Include="Providers\Sql\Sql2000\Sql2000TypeMapper.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
