--- a/DatabaseAutoMigrator/DatabaseAutoMigrator.Tests/DatabaseAutoMigrator.Tests.csproj
+++ b/DatabaseAutoMigrator/DatabaseAutoMigrator.Tests/DatabaseAutoMigrator.Tests.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="TestFiles\MigrationFile_10_CreateForeignKey.cs" />
     <Compile Include="TestFiles\MigrationFile_09_RenameTable.cs" />
     <Compile Include="TestFiles\MigrationFile_08_TableExists.cs" />
     <Compile Include="TestFiles\MigrationFile_07_RenameColumn.cs" />
