Added MigrationResult, moved&renamed tests

--- a/DatabaseAutoMigrator/DatabaseAutoMigrator/DatabaseAutoMigrator.csproj
+++ b/DatabaseAutoMigrator/DatabaseAutoMigrator/DatabaseAutoMigrator.csproj
@@ -51,6 +51,7 @@
     <Compile Include="IColumnGenerator.cs" />
     <Compile Include="ICommandGenerator.cs" />
     <Compile Include="ITypeMapper.cs" />
+    <Compile Include="MigrationResult.cs" />
     <Compile Include="Models\Expressions\AlterTableExpression.cs" />
     <Compile Include="Models\Expressions\BaseMigrationExpression.cs" />
     <Compile Include="Models\Expressions\CreateTableExpression.cs" />
@@ -93,7 +94,9 @@
     <Compile Include="Providers\Sql\SqlDialect.cs" />
     <Compile Include="Providers\Sql\Sql2000\Sql2000TypeMapper.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
