--- a/DatabaseAutoMigrator/ConsoleTest/ConsoleTest.csproj
+++ b/DatabaseAutoMigrator/ConsoleTest/ConsoleTest.csproj
@@ -33,6 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DatabaseAutoMigrator">
+      <HintPath>..\packages\DatabaseAutoMigrator.1.0.2\lib\DatabaseAutoMigrator.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.0.1.10\lib\net40\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,12 +54,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DatabaseAutoMigrator\DatabaseAutoMigrator.csproj">
-      <Project>{8aafb3b1-e748-44a5-87b7-259944211d8e}</Project>
-      <Name>DatabaseAutoMigrator</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
