--- a/DatabaseAutoMigrator/DatabaseAutoMigrator.Tests/DatabaseAutoMigrator.Tests.csproj
+++ b/DatabaseAutoMigrator/DatabaseAutoMigrator.Tests/DatabaseAutoMigrator.Tests.csproj
@@ -52,9 +52,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Sql2008Migration_Assembly.cs" />
+    <Compile Include="Sql2008\Test_MigrateResult.cs" />
+    <Compile Include="Sql2008\Test_Migrate_Assembly.cs" />
     <Compile Include="Helpers\SqlDatabaseHelper.cs" />
-    <Compile Include="Sql2008Migration_MultiFiles.cs" />
+    <Compile Include="Sql2008\Test_Migrate_MultiFiles.cs" />
+    <Compile Include="TestFiles\MigrationFile_MigrateResult.cs" />
     <Compile Include="TestFiles\MigrationFile_13_DropConstraint.cs" />
     <Compile Include="TestFiles\MigrationFile_12_CreateUnique.cs" />
     <Compile Include="TestFiles\MigrationFile_10_CreatePrimaryKey.cs" />
@@ -69,7 +71,7 @@
     <Compile Include="TestFiles\MigrationFile_02_AlterTable.cs" />
     <Compile Include="TestFiles\MigrationFile_01_CreateTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sql2008Migration_SingleFile.cs" />
+    <Compile Include="Sql2008\Test_Migrate_SingleFile.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DatabaseAutoMigrator\DatabaseAutoMigrator.csproj">
@@ -78,7 +80,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="SingleFile_Ordered.orderedtest">
+    <None Include="Sql2008\OrderedTest_MigrateFile.orderedtest">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Sql2008\OrderedTest_GenerateCommands.orderedtest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
